total cost breakdown spec

--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -112,31 +112,31 @@
        "      <th>0</th>\n",
        "      <td>Storage</td>\n",
        "      <td>0E-9</td>\n",
-       "      <td>1948.223478620758</td>\n",
+       "      <td>84.288656544856</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>WH Compute</td>\n",
-       "      <td>81241.520555609</td>\n",
-       "      <td>81241.520555609000</td>\n",
+       "      <td>3798.955277796</td>\n",
+       "      <td>3798.955277796000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  WAREHOUSE_GROUP_NAME TOTAL_CREDITS_USED  TOTAL_DOLLARS_USED\n",
-       "0              Storage               0E-9   1948.223478620758\n",
-       "1           WH Compute    81241.520555609  81241.520555609000"
+       "  WAREHOUSE_GROUP_NAME TOTAL_CREDITS_USED TOTAL_DOLLARS_USED\n",
+       "0              Storage               0E-9    84.288656544856\n",
+       "1           WH Compute     3798.955277796  3798.955277796000"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = qlib.cost_by_usage_type('2022-01-01', '2022-12-31')\n",
+    "df = qlib.cost_by_usage_type('2022-10-01', '2022-10-31')\n",
     "df"
    ]
   },
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -198,14 +198,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df = qlib.cost_of_compute_ts('2022-10-12', '2022-10-13')"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -229,9 +231,8 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>USER_NAME</th>\n",
        "      <th>WAREHOUSE_GROUP_NAME</th>\n",
-       "      <th>CREDITS_USED</th>\n",
+       "      <th>TOTAL_CREDITS_USED</th>\n",
        "      <th>CUMULATIVE_CREDITS_TOTAL</th>\n",
        "      <th>START_TIME</th>\n",
        "      <th>END_TIME</th>\n",
@@ -240,153 +241,222 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>USER</td>\n",
-       "      <td>Auto Clustering</td>\n",
-       "      <td>0.017153673</td>\n",
-       "      <td>0.017153673</td>\n",
-       "      <td>2020-05-13 23:00:00-07:00</td>\n",
-       "      <td>2020-05-14 00:00:00-07:00</td>\n",
+       "      <td>WH Compute</td>\n",
+       "      <td>10.491666666</td>\n",
+       "      <td>10.491666666</td>\n",
+       "      <td>2022-10-12 00:00:00-07:00</td>\n",
+       "      <td>2022-10-12 01:00:00-07:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>USER</td>\n",
-       "      <td>Auto Clustering</td>\n",
-       "      <td>0.002138804</td>\n",
-       "      <td>0.019292477</td>\n",
-       "      <td>2020-05-14 01:00:00-07:00</td>\n",
-       "      <td>2020-05-14 02:00:00-07:00</td>\n",
+       "      <td>WH Compute</td>\n",
+       "      <td>10.686666666</td>\n",
+       "      <td>21.178333332</td>\n",
+       "      <td>2022-10-12 01:00:00-07:00</td>\n",
+       "      <td>2022-10-12 02:00:00-07:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>USER</td>\n",
-       "      <td>Auto Clustering</td>\n",
-       "      <td>0.000392205</td>\n",
-       "      <td>0.019684682</td>\n",
-       "      <td>2020-05-14 02:00:00-07:00</td>\n",
-       "      <td>2020-05-14 03:00:00-07:00</td>\n",
+       "      <td>WH Compute</td>\n",
+       "      <td>9.407499999</td>\n",
+       "      <td>30.585833331</td>\n",
+       "      <td>2022-10-12 02:00:00-07:00</td>\n",
+       "      <td>2022-10-12 03:00:00-07:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>USER</td>\n",
-       "      <td>Auto Clustering</td>\n",
-       "      <td>0.000553646</td>\n",
-       "      <td>0.020238328</td>\n",
-       "      <td>2020-05-14 04:00:00-07:00</td>\n",
-       "      <td>2020-05-14 05:00:00-07:00</td>\n",
+       "      <td>WH Compute</td>\n",
+       "      <td>10.334166666</td>\n",
+       "      <td>40.919999997</td>\n",
+       "      <td>2022-10-12 03:00:00-07:00</td>\n",
+       "      <td>2022-10-12 04:00:00-07:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>USER</td>\n",
-       "      <td>Auto Clustering</td>\n",
-       "      <td>0.000468686</td>\n",
-       "      <td>0.020707014</td>\n",
-       "      <td>2020-05-14 05:00:00-07:00</td>\n",
-       "      <td>2020-05-14 06:00:00-07:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47569</th>\n",
-       "      <td>VERTEX_PROD</td>\n",
        "      <td>WH Compute</td>\n",
-       "      <td>3.162718334</td>\n",
-       "      <td>113078.835138905</td>\n",
+       "      <td>9.422499999</td>\n",
+       "      <td>50.342499996</td>\n",
+       "      <td>2022-10-12 04:00:00-07:00</td>\n",
+       "      <td>2022-10-12 05:00:00-07:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>WH Compute</td>\n",
+       "      <td>9.425833332</td>\n",
+       "      <td>59.768333328</td>\n",
+       "      <td>2022-10-12 05:00:00-07:00</td>\n",
+       "      <td>2022-10-12 06:00:00-07:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>WH Compute</td>\n",
+       "      <td>10.378333332</td>\n",
+       "      <td>70.146666660</td>\n",
+       "      <td>2022-10-12 06:00:00-07:00</td>\n",
+       "      <td>2022-10-12 07:00:00-07:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>WH Compute</td>\n",
+       "      <td>9.438333333</td>\n",
+       "      <td>79.584999993</td>\n",
+       "      <td>2022-10-12 07:00:00-07:00</td>\n",
+       "      <td>2022-10-12 08:00:00-07:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>WH Compute</td>\n",
+       "      <td>9.429999999</td>\n",
+       "      <td>89.014999992</td>\n",
+       "      <td>2022-10-12 08:00:00-07:00</td>\n",
+       "      <td>2022-10-12 09:00:00-07:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>WH Compute</td>\n",
+       "      <td>26.966944446</td>\n",
+       "      <td>115.981944438</td>\n",
+       "      <td>2022-10-12 09:00:00-07:00</td>\n",
+       "      <td>2022-10-12 10:00:00-07:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>WH Compute</td>\n",
+       "      <td>25.420000000</td>\n",
+       "      <td>141.401944438</td>\n",
+       "      <td>2022-10-12 10:00:00-07:00</td>\n",
+       "      <td>2022-10-12 11:00:00-07:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>WH Compute</td>\n",
+       "      <td>19.189999999</td>\n",
+       "      <td>160.591944437</td>\n",
+       "      <td>2022-10-12 11:00:00-07:00</td>\n",
+       "      <td>2022-10-12 12:00:00-07:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>WH Compute</td>\n",
+       "      <td>13.244166666</td>\n",
+       "      <td>173.836111103</td>\n",
+       "      <td>2022-10-12 12:00:00-07:00</td>\n",
+       "      <td>2022-10-12 13:00:00-07:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>WH Compute</td>\n",
+       "      <td>13.520000001</td>\n",
+       "      <td>187.356111104</td>\n",
+       "      <td>2022-10-12 13:00:00-07:00</td>\n",
+       "      <td>2022-10-12 14:00:00-07:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>WH Compute</td>\n",
+       "      <td>16.289166667</td>\n",
+       "      <td>203.645277771</td>\n",
+       "      <td>2022-10-12 14:00:00-07:00</td>\n",
+       "      <td>2022-10-12 15:00:00-07:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>WH Compute</td>\n",
+       "      <td>15.675000001</td>\n",
+       "      <td>219.320277772</td>\n",
+       "      <td>2022-10-12 15:00:00-07:00</td>\n",
+       "      <td>2022-10-12 16:00:00-07:00</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>WH Compute</td>\n",
+       "      <td>13.853611111</td>\n",
+       "      <td>233.173888883</td>\n",
+       "      <td>2022-10-12 16:00:00-07:00</td>\n",
        "      <td>2022-10-12 17:00:00-07:00</td>\n",
-       "      <td>2022-10-12 18:00:00-07:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>47570</th>\n",
-       "      <td>DBT_DEV</td>\n",
+       "      <th>17</th>\n",
        "      <td>WH Compute</td>\n",
-       "      <td>1.030006111</td>\n",
-       "      <td>113078.835138905</td>\n",
-       "      <td>2022-10-12 17:00:00-07:00</td>\n",
-       "      <td>2022-10-12 18:00:00-07:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47571</th>\n",
-       "      <td>GREGORYW</td>\n",
-       "      <td>WH Compute</td>\n",
-       "      <td>4.300761945</td>\n",
-       "      <td>113078.835138905</td>\n",
-       "      <td>2022-10-12 17:00:00-07:00</td>\n",
-       "      <td>2022-10-12 18:00:00-07:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47572</th>\n",
-       "      <td>None</td>\n",
-       "      <td>WH Compute</td>\n",
-       "      <td>2.139133889</td>\n",
-       "      <td>113078.835138905</td>\n",
-       "      <td>2022-10-12 17:00:00-07:00</td>\n",
-       "      <td>2022-10-12 18:00:00-07:00</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>47573</th>\n",
-       "      <td>ROBS</td>\n",
-       "      <td>WH Compute</td>\n",
-       "      <td>0.108037500</td>\n",
-       "      <td>113078.835138905</td>\n",
+       "      <td>13.319166667</td>\n",
+       "      <td>246.493055550</td>\n",
        "      <td>2022-10-12 17:00:00-07:00</td>\n",
        "      <td>2022-10-12 18:00:00-07:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>47574 rows × 6 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "         USER_NAME WAREHOUSE_GROUP_NAME CREDITS_USED CUMULATIVE_CREDITS_TOTAL  \\\n",
-       "0             USER      Auto Clustering  0.017153673              0.017153673   \n",
-       "1             USER      Auto Clustering  0.002138804              0.019292477   \n",
-       "2             USER      Auto Clustering  0.000392205              0.019684682   \n",
-       "3             USER      Auto Clustering  0.000553646              0.020238328   \n",
-       "4             USER      Auto Clustering  0.000468686              0.020707014   \n",
-       "...            ...                  ...          ...                      ...   \n",
-       "47569  VERTEX_PROD           WH Compute  3.162718334         113078.835138905   \n",
-       "47570      DBT_DEV           WH Compute  1.030006111         113078.835138905   \n",
-       "47571     GREGORYW           WH Compute  4.300761945         113078.835138905   \n",
-       "47572         None           WH Compute  2.139133889         113078.835138905   \n",
-       "47573         ROBS           WH Compute  0.108037500         113078.835138905   \n",
+       "   WAREHOUSE_GROUP_NAME TOTAL_CREDITS_USED CUMULATIVE_CREDITS_TOTAL  \\\n",
+       "0            WH Compute       10.491666666             10.491666666   \n",
+       "1            WH Compute       10.686666666             21.178333332   \n",
+       "2            WH Compute        9.407499999             30.585833331   \n",
+       "3            WH Compute       10.334166666             40.919999997   \n",
+       "4            WH Compute        9.422499999             50.342499996   \n",
+       "5            WH Compute        9.425833332             59.768333328   \n",
+       "6            WH Compute       10.378333332             70.146666660   \n",
+       "7            WH Compute        9.438333333             79.584999993   \n",
+       "8            WH Compute        9.429999999             89.014999992   \n",
+       "9            WH Compute       26.966944446            115.981944438   \n",
+       "10           WH Compute       25.420000000            141.401944438   \n",
+       "11           WH Compute       19.189999999            160.591944437   \n",
+       "12           WH Compute       13.244166666            173.836111103   \n",
+       "13           WH Compute       13.520000001            187.356111104   \n",
+       "14           WH Compute       16.289166667            203.645277771   \n",
+       "15           WH Compute       15.675000001            219.320277772   \n",
+       "16           WH Compute       13.853611111            233.173888883   \n",
+       "17           WH Compute       13.319166667            246.493055550   \n",
        "\n",
-       "                     START_TIME                  END_TIME  \n",
-       "0     2020-05-13 23:00:00-07:00 2020-05-14 00:00:00-07:00  \n",
-       "1     2020-05-14 01:00:00-07:00 2020-05-14 02:00:00-07:00  \n",
-       "2     2020-05-14 02:00:00-07:00 2020-05-14 03:00:00-07:00  \n",
-       "3     2020-05-14 04:00:00-07:00 2020-05-14 05:00:00-07:00  \n",
-       "4     2020-05-14 05:00:00-07:00 2020-05-14 06:00:00-07:00  \n",
-       "...                         ...                       ...  \n",
-       "47569 2022-10-12 17:00:00-07:00 2022-10-12 18:00:00-07:00  \n",
-       "47570 2022-10-12 17:00:00-07:00 2022-10-12 18:00:00-07:00  \n",
-       "47571 2022-10-12 17:00:00-07:00 2022-10-12 18:00:00-07:00  \n",
-       "47572 2022-10-12 17:00:00-07:00 2022-10-12 18:00:00-07:00  \n",
-       "47573 2022-10-12 17:00:00-07:00 2022-10-12 18:00:00-07:00  \n",
-       "\n",
-       "[47574 rows x 6 columns]"
+       "                  START_TIME                  END_TIME  \n",
+       "0  2022-10-12 00:00:00-07:00 2022-10-12 01:00:00-07:00  \n",
+       "1  2022-10-12 01:00:00-07:00 2022-10-12 02:00:00-07:00  \n",
+       "2  2022-10-12 02:00:00-07:00 2022-10-12 03:00:00-07:00  \n",
+       "3  2022-10-12 03:00:00-07:00 2022-10-12 04:00:00-07:00  \n",
+       "4  2022-10-12 04:00:00-07:00 2022-10-12 05:00:00-07:00  \n",
+       "5  2022-10-12 05:00:00-07:00 2022-10-12 06:00:00-07:00  \n",
+       "6  2022-10-12 06:00:00-07:00 2022-10-12 07:00:00-07:00  \n",
+       "7  2022-10-12 07:00:00-07:00 2022-10-12 08:00:00-07:00  \n",
+       "8  2022-10-12 08:00:00-07:00 2022-10-12 09:00:00-07:00  \n",
+       "9  2022-10-12 09:00:00-07:00 2022-10-12 10:00:00-07:00  \n",
+       "10 2022-10-12 10:00:00-07:00 2022-10-12 11:00:00-07:00  \n",
+       "11 2022-10-12 11:00:00-07:00 2022-10-12 12:00:00-07:00  \n",
+       "12 2022-10-12 12:00:00-07:00 2022-10-12 13:00:00-07:00  \n",
+       "13 2022-10-12 13:00:00-07:00 2022-10-12 14:00:00-07:00  \n",
+       "14 2022-10-12 14:00:00-07:00 2022-10-12 15:00:00-07:00  \n",
+       "15 2022-10-12 15:00:00-07:00 2022-10-12 16:00:00-07:00  \n",
+       "16 2022-10-12 16:00:00-07:00 2022-10-12 17:00:00-07:00  \n",
+       "17 2022-10-12 17:00:00-07:00 2022-10-12 18:00:00-07:00  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "qlib.cost_by_user_ts('2022-01-01', '2022-12-31')"
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Decimal('246.493055550')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['TOTAL_CREDITS_USED'].sum()"
+   ]
   },
   {
    "cell_type": "code",
