Updated spec on total cost

--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -73,93 +73,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>WAREHOUSE_NAME</th>\n",
-       "      <th>CREDITS_USED_COMPUTE_SUM</th>\n",
-       "      <th>TOTAL_DOLLARS_USED</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>PROD_WH</td>\n",
-       "      <td>612.847780833</td>\n",
-       "      <td>1225.695561666</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ML_WH</td>\n",
-       "      <td>70.201448074</td>\n",
-       "      <td>140.402896148</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>DEV_WH</td>\n",
-       "      <td>398.834608888</td>\n",
-       "      <td>797.669217776</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>DAILY_REFRESH_WH</td>\n",
-       "      <td>173.591642219</td>\n",
-       "      <td>347.183284438</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>CLOUD_SERVICES_ONLY</td>\n",
-       "      <td>0.000201944</td>\n",
-       "      <td>0.000403888</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "        WAREHOUSE_NAME CREDITS_USED_COMPUTE_SUM TOTAL_DOLLARS_USED\n",
-       "0              PROD_WH            612.847780833     1225.695561666\n",
-       "1                ML_WH             70.201448074      140.402896148\n",
-       "2               DEV_WH            398.834608888      797.669217776\n",
-       "3     DAILY_REFRESH_WH            173.591642219      347.183284438\n",
-       "4  CLOUD_SERVICES_ONLY              0.000201944        0.000403888"
+       "COST_CATEGORY         object\n",
+       "TOTAL_CREDITS         object\n",
+       "TOTAL_DOLLARS_USED    object\n",
+       "dtype: object"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df = qlib.total_cost_breakdown('2022-10-01', '2022-10-31')\n",
-    "df = qlib.cost_by_wh('2022-10-01', '2022-10-31')\n",
-    "df"
+    "df = df.fillna(0)\n",
+    "df.dtypes"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -181,35 +120,59 @@
           ]
          },
          "labels": [
-          "PROD_WH",
-          "ML_WH",
-          "DEV_WH",
-          "DAILY_REFRESH_WH",
-          "CLOUD_SERVICES_ONLY"
+          "STORAGE",
+          "COMPUTE",
+          "CLOUD SERVICES",
+          "AUTOCLUSTERING",
+          "SNOWPIPE",
+          "MATERIALIZED VIEW",
+          "REPLICATION",
+          "SEARCH OPTIMIZATION HISTORY"
          ],
          "type": "pie",
          "values": [
-          612.847780833,
-          70.201448074,
-          398.834608888,
-          173.591642219,
-          0.000201944
+          84.288656544856,
+          2418.059444458,
+          92.891919458,
+          null,
+          null,
+          null,
+          null,
+          null
          ]
         },
         {
          "cells": {
           "values": [
            [
-            100,
-            90,
-            80,
-            90
+            "STORAGE",
+            "COMPUTE",
+            "CLOUD SERVICES",
+            "AUTOCLUSTERING",
+            "SNOWPIPE",
+            "MATERIALIZED VIEW",
+            "REPLICATION",
+            "SEARCH OPTIMIZATION HISTORY"
            ],
            [
-            95,
-            85,
-            75,
-            95
+            null,
+            1209.029722229,
+            46.445959729,
+            null,
+            null,
+            null,
+            null,
+            null
+           ],
+           [
+            84.288656544856,
+            2418.059444458,
+            92.891919458,
+            null,
+            null,
+            null,
+            null,
+            null
            ]
           ]
          },
@@ -225,14 +188,18 @@
          },
          "header": {
           "values": [
-           "A Scores",
-           "B Scores"
+           "COST_CATEGORY",
+           "TOTAL_CREDITS",
+           "TOTAL_DOLLARS_USED"
           ]
          },
          "type": "table"
         }
        ],
        "layout": {
+        "font": {
+         "size": 10
+        },
         "template": {
          "data": {
           "bar": [
@@ -1059,15 +1026,13 @@
    "source": [
     "fig = make_subplots(\n",
     "    rows=1, cols=2,\n",
-    "    specs=[[{\"type\": \"pie\"}, {\"type\": \"table\"}]]\n",
+    "    specs=[[{\"type\": \"table\"},{\"type\": \"pie\"}]]\n",
     ")\n",
-    "# fig = go.Figure()\n",
-    "fig.add_trace(go.Pie(labels=df['WAREHOUSE_NAME'].tolist(), values=df['CREDITS_USED_COMPUTE_SUM'].tolist()),row=1, col=1)\n",
-    "fig.add_trace(go.Table(header=dict(values=['A Scores', 'B Scores']),\n",
-    "                 cells=dict(values=[[100, 90, 80, 90], [95, 85, 75, 95]])),row=1, col=2)\n",
-    "fig.show()\n",
-    "# display(tabulate(df, headers = 'keys', tablefmt = 'html', showindex=\"never\"))\n",
-    "# fig = px.pie(df, values='CREDITS_USED_COMPUTE_SUM', names='WAREHOUSE_NAME', title='Credits Used by Type')"
+    "fig.add_trace(go.Pie(labels=df['COST_CATEGORY'].tolist(), values=df['TOTAL_DOLLARS_USED'].tolist()),row=1, col=1)\n",
+    "fig.add_trace(go.Table(header=dict(values=['COST_CATEGORY','TOTAL_CREDITS', 'TOTAL_DOLLARS_USED']),\n",
+    "                 cells=dict(values=[df['COST_CATEGORY'],df['TOTAL_CREDITS'],df['TOTAL_DOLLARS_USED']])),row=1, col=2)\n",
+    "fig.update_layout(font_size=10)\n",
+    "fig.show()"
    ]
   },
   {
