--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -59,7 +59,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/Users/skumar/.snowsql/config\n",
       "Connecting...\n"
      ]
     }
@@ -67,38 +66,98 @@
    "source": [
     "from optiml.connection import SnowflakeConnConfig\n",
     "from optiml.queries import SNFLKQuery\n",
-    "connection = SnowflakeConnConfig(accountname='VUJSGPR-XG91870', warehousename=\"XSMALL_WH\").create_connection()\n",
+    "connection = SnowflakeConnConfig(accountname='jg84276.us-central1.gcp',username='nikhilu',password='NikhilU123', warehousename=\"XSMALL_WH\").create_connection()\n",
     "qlib = SNFLKQuery(connection, 'KIV')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>WAREHOUSE_NAME</th>\n",
+       "      <th>CREDITS_USED_COMPUTE_SUM</th>\n",
+       "      <th>TOTAL_DOLLARS_USED</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>PROD_WH</td>\n",
+       "      <td>612.847780833</td>\n",
+       "      <td>1225.695561666</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ML_WH</td>\n",
+       "      <td>70.201448074</td>\n",
+       "      <td>140.402896148</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>DEV_WH</td>\n",
+       "      <td>398.834608888</td>\n",
+       "      <td>797.669217776</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>DAILY_REFRESH_WH</td>\n",
+       "      <td>173.591642219</td>\n",
+       "      <td>347.183284438</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>CLOUD_SERVICES_ONLY</td>\n",
+       "      <td>0.000201944</td>\n",
+       "      <td>0.000403888</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "COST_CATEGORY         object\n",
-       "TOTAL_CREDITS         object\n",
-       "TOTAL_DOLLARS_USED    object\n",
-       "dtype: object"
+       "        WAREHOUSE_NAME CREDITS_USED_COMPUTE_SUM TOTAL_DOLLARS_USED\n",
+       "0              PROD_WH            612.847780833     1225.695561666\n",
+       "1                ML_WH             70.201448074      140.402896148\n",
+       "2               DEV_WH            398.834608888      797.669217776\n",
+       "3     DAILY_REFRESH_WH            173.591642219      347.183284438\n",
+       "4  CLOUD_SERVICES_ONLY              0.000201944        0.000403888"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = qlib.total_cost_breakdown('2022-10-01', '2022-10-31')\n",
-    "df = df.fillna(0)\n",
-    "df.dtypes"
+    "df = qlib.cost_by_wh('2022-10-01', '2022-10-31')\n",
+    "df"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -111,73 +170,6 @@
         {
          "domain": {
           "x": [
-           0,
-           0.45
-          ],
-          "y": [
-           0,
-           1
-          ]
-         },
-         "labels": [
-          "STORAGE",
-          "COMPUTE",
-          "CLOUD SERVICES",
-          "AUTOCLUSTERING",
-          "SNOWPIPE",
-          "MATERIALIZED VIEW",
-          "REPLICATION",
-          "SEARCH OPTIMIZATION HISTORY"
-         ],
-         "type": "pie",
-         "values": [
-          84.288656544856,
-          2418.059444458,
-          92.891919458,
-          null,
-          null,
-          null,
-          null,
-          null
-         ]
-        },
-        {
-         "cells": {
-          "values": [
-           [
-            "STORAGE",
-            "COMPUTE",
-            "CLOUD SERVICES",
-            "AUTOCLUSTERING",
-            "SNOWPIPE",
-            "MATERIALIZED VIEW",
-            "REPLICATION",
-            "SEARCH OPTIMIZATION HISTORY"
-           ],
-           [
-            null,
-            1209.029722229,
-            46.445959729,
-            null,
-            null,
-            null,
-            null,
-            null
-           ],
-           [
-            84.288656544856,
-            2418.059444458,
-            92.891919458,
-            null,
-            null,
-            null,
-            null,
-            null
-           ]
-          ]
-         },
-         "domain": {
-          "x": [
            0.55,
            1
           ],
@@ -186,10 +178,70 @@
            1
           ]
          },
-         "header": {
+         "labels": [
+          "PROD_WH",
+          "ML_WH",
+          "DEV_WH",
+          "DAILY_REFRESH_WH",
+          "CLOUD_SERVICES_ONLY"
+         ],
+         "type": "pie",
+         "values": [
+          612.847780833,
+          70.201448074,
+          398.834608888,
+          173.591642219,
+          0.000201944
+         ]
+        },
+        {
+         "cells": {
+          "font": {
+           "size": 11
+          },
+          "height": 45,
           "values": [
-           "COST_CATEGORY",
-           "TOTAL_CREDITS",
+           [
+            "PROD_WH",
+            "ML_WH",
+            "DEV_WH",
+            "DAILY_REFRESH_WH",
+            "CLOUD_SERVICES_ONLY"
+           ],
+           [
+            612.847780833,
+            70.201448074,
+            398.834608888,
+            173.591642219,
+            0.000201944
+           ],
+           [
+            1225.695561666,
+            140.402896148,
+            797.669217776,
+            347.183284438,
+            0.000403888
+           ]
+          ]
+         },
+         "domain": {
+          "x": [
+           0,
+           0.45
+          ],
+          "y": [
+           0,
+           1
+          ]
+         },
+         "header": {
+          "font": {
+           "size": 10
+          },
+          "height": 40,
+          "values": [
+           "WAREHOUSE_NAME",
+           "CREDITS_USED_COMPUTE_SUM",
            "TOTAL_DOLLARS_USED"
           ]
          },
@@ -197,9 +249,6 @@
         }
        ],
        "layout": {
-        "font": {
-         "size": 10
-        },
         "template": {
          "data": {
           "bar": [
@@ -1017,7 +1066,34 @@
          }
         }
        }
-      }
+      },
+      "text/html": [
+       "<div>                            <div id=\"abfe9a12-4342-4873-8b16-3ee60803d801\" class=\"plotly-graph-div\" style=\"height:525px; width:100%;\"></div>            <script type=\"text/javascript\">                require([\"plotly\"], function(Plotly) {                    window.PLOTLYENV=window.PLOTLYENV || {};                                    if (document.getElementById(\"abfe9a12-4342-4873-8b16-3ee60803d801\")) {                    Plotly.newPlot(                        \"abfe9a12-4342-4873-8b16-3ee60803d801\",                        [{\"labels\":[\"PROD_WH\",\"ML_WH\",\"DEV_WH\",\"DAILY_REFRESH_WH\",\"CLOUD_SERVICES_ONLY\"],\"values\":[612.847780833,70.201448074,398.834608888,173.591642219,0.000201944],\"type\":\"pie\",\"domain\":{\"x\":[0.55,1.0],\"y\":[0.0,1.0]}},{\"cells\":{\"font\":{\"size\":11},\"height\":45,\"values\":[[\"PROD_WH\",\"ML_WH\",\"DEV_WH\",\"DAILY_REFRESH_WH\",\"CLOUD_SERVICES_ONLY\"],[612.847780833,70.201448074,398.834608888,173.591642219,0.000201944],[1225.695561666,140.402896148,797.669217776,347.183284438,0.000403888]]},\"header\":{\"font\":{\"size\":10},\"height\":40,\"values\":[\"WAREHOUSE_NAME\",\"CREDITS_USED_COMPUTE_SUM\",\"TOTAL_DOLLARS_USED\"]},\"type\":\"table\",\"domain\":{\"x\":[0.0,0.45],\"y\":[0.0,1.0]}}],                        {\"template\":{\"data\":{\"histogram2dcontour\":[{\"type\":\"histogram2dcontour\",\"colorbar\":{\"outlinewidth\":0,\"ticks\":\"\"},\"colorscale\":[[0.0,\"#0d0887\"],[0.1111111111111111,\"#46039f\"],[0.2222222222222222,\"#7201a8\"],[0.3333333333333333,\"#9c179e\"],[0.4444444444444444,\"#bd3786\"],[0.5555555555555556,\"#d8576b\"],[0.6666666666666666,\"#ed7953\"],[0.7777777777777778,\"#fb9f3a\"],[0.8888888888888888,\"#fdca26\"],[1.0,\"#f0f921\"]]}],\"choropleth\":[{\"type\":\"choropleth\",\"colorbar\":{\"outlinewidth\":0,\"ticks\":\"\"}}],\"histogram2d\":[{\"type\":\"histogram2d\",\"colorbar\":{\"outlinewidth\":0,\"ticks\":\"\"},\"colorscale\":[[0.0,\"#0d0887\"],[0.1111111111111111,\"#46039f\"],[0.2222222222222222,\"#7201a8\"],[0.3333333333333333,\"#9c179e\"],[0.4444444444444444,\"#bd3786\"],[0.5555555555555556,\"#d8576b\"],[0.6666666666666666,\"#ed7953\"],[0.7777777777777778,\"#fb9f3a\"],[0.8888888888888888,\"#fdca26\"],[1.0,\"#f0f921\"]]}],\"heatmap\":[{\"type\":\"heatmap\",\"colorbar\":{\"outlinewidth\":0,\"ticks\":\"\"},\"colorscale\":[[0.0,\"#0d0887\"],[0.1111111111111111,\"#46039f\"],[0.2222222222222222,\"#7201a8\"],[0.3333333333333333,\"#9c179e\"],[0.4444444444444444,\"#bd3786\"],[0.5555555555555556,\"#d8576b\"],[0.6666666666666666,\"#ed7953\"],[0.7777777777777778,\"#fb9f3a\"],[0.8888888888888888,\"#fdca26\"],[1.0,\"#f0f921\"]]}],\"heatmapgl\":[{\"type\":\"heatmapgl\",\"colorbar\":{\"outlinewidth\":0,\"ticks\":\"\"},\"colorscale\":[[0.0,\"#0d0887\"],[0.1111111111111111,\"#46039f\"],[0.2222222222222222,\"#7201a8\"],[0.3333333333333333,\"#9c179e\"],[0.4444444444444444,\"#bd3786\"],[0.5555555555555556,\"#d8576b\"],[0.6666666666666666,\"#ed7953\"],[0.7777777777777778,\"#fb9f3a\"],[0.8888888888888888,\"#fdca26\"],[1.0,\"#f0f921\"]]}],\"contourcarpet\":[{\"type\":\"contourcarpet\",\"colorbar\":{\"outlinewidth\":0,\"ticks\":\"\"}}],\"contour\":[{\"type\":\"contour\",\"colorbar\":{\"outlinewidth\":0,\"ticks\":\"\"},\"colorscale\":[[0.0,\"#0d0887\"],[0.1111111111111111,\"#46039f\"],[0.2222222222222222,\"#7201a8\"],[0.3333333333333333,\"#9c179e\"],[0.4444444444444444,\"#bd3786\"],[0.5555555555555556,\"#d8576b\"],[0.6666666666666666,\"#ed7953\"],[0.7777777777777778,\"#fb9f3a\"],[0.8888888888888888,\"#fdca26\"],[1.0,\"#f0f921\"]]}],\"surface\":[{\"type\":\"surface\",\"colorbar\":{\"outlinewidth\":0,\"ticks\":\"\"},\"colorscale\":[[0.0,\"#0d0887\"],[0.1111111111111111,\"#46039f\"],[0.2222222222222222,\"#7201a8\"],[0.3333333333333333,\"#9c179e\"],[0.4444444444444444,\"#bd3786\"],[0.5555555555555556,\"#d8576b\"],[0.6666666666666666,\"#ed7953\"],[0.7777777777777778,\"#fb9f3a\"],[0.8888888888888888,\"#fdca26\"],[1.0,\"#f0f921\"]]}],\"mesh3d\":[{\"type\":\"mesh3d\",\"colorbar\":{\"outlinewidth\":0,\"ticks\":\"\"}}],\"scatter\":[{\"fillpattern\":{\"fillmode\":\"overlay\",\"size\":10,\"solidity\":0.2},\"type\":\"scatter\"}],\"parcoords\":[{\"type\":\"parcoords\",\"line\":{\"colorbar\":{\"outlinewidth\":0,\"ticks\":\"\"}}}],\"scatterpolargl\":[{\"type\":\"scatterpolargl\",\"marker\":{\"colorbar\":{\"outlinewidth\":0,\"ticks\":\"\"}}}],\"bar\":[{\"error_x\":{\"color\":\"#2a3f5f\"},\"error_y\":{\"color\":\"#2a3f5f\"},\"marker\":{\"line\":{\"color\":\"#E5ECF6\",\"width\":0.5},\"pattern\":{\"fillmode\":\"overlay\",\"size\":10,\"solidity\":0.2}},\"type\":\"bar\"}],\"scattergeo\":[{\"type\":\"scattergeo\",\"marker\":{\"colorbar\":{\"outlinewidth\":0,\"ticks\":\"\"}}}],\"scatterpolar\":[{\"type\":\"scatterpolar\",\"marker\":{\"colorbar\":{\"outlinewidth\":0,\"ticks\":\"\"}}}],\"histogram\":[{\"marker\":{\"pattern\":{\"fillmode\":\"overlay\",\"size\":10,\"solidity\":0.2}},\"type\":\"histogram\"}],\"scattergl\":[{\"type\":\"scattergl\",\"marker\":{\"colorbar\":{\"outlinewidth\":0,\"ticks\":\"\"}}}],\"scatter3d\":[{\"type\":\"scatter3d\",\"line\":{\"colorbar\":{\"outlinewidth\":0,\"ticks\":\"\"}},\"marker\":{\"colorbar\":{\"outlinewidth\":0,\"ticks\":\"\"}}}],\"scattermapbox\":[{\"type\":\"scattermapbox\",\"marker\":{\"colorbar\":{\"outlinewidth\":0,\"ticks\":\"\"}}}],\"scatterternary\":[{\"type\":\"scatterternary\",\"marker\":{\"colorbar\":{\"outlinewidth\":0,\"ticks\":\"\"}}}],\"scattercarpet\":[{\"type\":\"scattercarpet\",\"marker\":{\"colorbar\":{\"outlinewidth\":0,\"ticks\":\"\"}}}],\"carpet\":[{\"aaxis\":{\"endlinecolor\":\"#2a3f5f\",\"gridcolor\":\"white\",\"linecolor\":\"white\",\"minorgridcolor\":\"white\",\"startlinecolor\":\"#2a3f5f\"},\"baxis\":{\"endlinecolor\":\"#2a3f5f\",\"gridcolor\":\"white\",\"linecolor\":\"white\",\"minorgridcolor\":\"white\",\"startlinecolor\":\"#2a3f5f\"},\"type\":\"carpet\"}],\"table\":[{\"cells\":{\"fill\":{\"color\":\"#EBF0F8\"},\"line\":{\"color\":\"white\"}},\"header\":{\"fill\":{\"color\":\"#C8D4E3\"},\"line\":{\"color\":\"white\"}},\"type\":\"table\"}],\"barpolar\":[{\"marker\":{\"line\":{\"color\":\"#E5ECF6\",\"width\":0.5},\"pattern\":{\"fillmode\":\"overlay\",\"size\":10,\"solidity\":0.2}},\"type\":\"barpolar\"}],\"pie\":[{\"automargin\":true,\"type\":\"pie\"}]},\"layout\":{\"autotypenumbers\":\"strict\",\"colorway\":[\"#636efa\",\"#EF553B\",\"#00cc96\",\"#ab63fa\",\"#FFA15A\",\"#19d3f3\",\"#FF6692\",\"#B6E880\",\"#FF97FF\",\"#FECB52\"],\"font\":{\"color\":\"#2a3f5f\"},\"hovermode\":\"closest\",\"hoverlabel\":{\"align\":\"left\"},\"paper_bgcolor\":\"white\",\"plot_bgcolor\":\"#E5ECF6\",\"polar\":{\"bgcolor\":\"#E5ECF6\",\"angularaxis\":{\"gridcolor\":\"white\",\"linecolor\":\"white\",\"ticks\":\"\"},\"radialaxis\":{\"gridcolor\":\"white\",\"linecolor\":\"white\",\"ticks\":\"\"}},\"ternary\":{\"bgcolor\":\"#E5ECF6\",\"aaxis\":{\"gridcolor\":\"white\",\"linecolor\":\"white\",\"ticks\":\"\"},\"baxis\":{\"gridcolor\":\"white\",\"linecolor\":\"white\",\"ticks\":\"\"},\"caxis\":{\"gridcolor\":\"white\",\"linecolor\":\"white\",\"ticks\":\"\"}},\"coloraxis\":{\"colorbar\":{\"outlinewidth\":0,\"ticks\":\"\"}},\"colorscale\":{\"sequential\":[[0.0,\"#0d0887\"],[0.1111111111111111,\"#46039f\"],[0.2222222222222222,\"#7201a8\"],[0.3333333333333333,\"#9c179e\"],[0.4444444444444444,\"#bd3786\"],[0.5555555555555556,\"#d8576b\"],[0.6666666666666666,\"#ed7953\"],[0.7777777777777778,\"#fb9f3a\"],[0.8888888888888888,\"#fdca26\"],[1.0,\"#f0f921\"]],\"sequentialminus\":[[0.0,\"#0d0887\"],[0.1111111111111111,\"#46039f\"],[0.2222222222222222,\"#7201a8\"],[0.3333333333333333,\"#9c179e\"],[0.4444444444444444,\"#bd3786\"],[0.5555555555555556,\"#d8576b\"],[0.6666666666666666,\"#ed7953\"],[0.7777777777777778,\"#fb9f3a\"],[0.8888888888888888,\"#fdca26\"],[1.0,\"#f0f921\"]],\"diverging\":[[0,\"#8e0152\"],[0.1,\"#c51b7d\"],[0.2,\"#de77ae\"],[0.3,\"#f1b6da\"],[0.4,\"#fde0ef\"],[0.5,\"#f7f7f7\"],[0.6,\"#e6f5d0\"],[0.7,\"#b8e186\"],[0.8,\"#7fbc41\"],[0.9,\"#4d9221\"],[1,\"#276419\"]]},\"xaxis\":{\"gridcolor\":\"white\",\"linecolor\":\"white\",\"ticks\":\"\",\"title\":{\"standoff\":15},\"zerolinecolor\":\"white\",\"automargin\":true,\"zerolinewidth\":2},\"yaxis\":{\"gridcolor\":\"white\",\"linecolor\":\"white\",\"ticks\":\"\",\"title\":{\"standoff\":15},\"zerolinecolor\":\"white\",\"automargin\":true,\"zerolinewidth\":2},\"scene\":{\"xaxis\":{\"backgroundcolor\":\"#E5ECF6\",\"gridcolor\":\"white\",\"linecolor\":\"white\",\"showbackground\":true,\"ticks\":\"\",\"zerolinecolor\":\"white\",\"gridwidth\":2},\"yaxis\":{\"backgroundcolor\":\"#E5ECF6\",\"gridcolor\":\"white\",\"linecolor\":\"white\",\"showbackground\":true,\"ticks\":\"\",\"zerolinecolor\":\"white\",\"gridwidth\":2},\"zaxis\":{\"backgroundcolor\":\"#E5ECF6\",\"gridcolor\":\"white\",\"linecolor\":\"white\",\"showbackground\":true,\"ticks\":\"\",\"zerolinecolor\":\"white\",\"gridwidth\":2}},\"shapedefaults\":{\"line\":{\"color\":\"#2a3f5f\"}},\"annotationdefaults\":{\"arrowcolor\":\"#2a3f5f\",\"arrowhead\":0,\"arrowwidth\":1},\"geo\":{\"bgcolor\":\"white\",\"landcolor\":\"#E5ECF6\",\"subunitcolor\":\"white\",\"showland\":true,\"showlakes\":true,\"lakecolor\":\"white\"},\"title\":{\"x\":0.05},\"mapbox\":{\"style\":\"light\"}}}},                        {\"responsive\": true}                    ).then(function(){\n",
+       "                            \n",
+       "var gd = document.getElementById('abfe9a12-4342-4873-8b16-3ee60803d801');\n",
+       "var x = new MutationObserver(function (mutations, observer) {{\n",
+       "        var display = window.getComputedStyle(gd).display;\n",
+       "        if (!display || display === 'none') {{\n",
+       "            console.log([gd, 'removed!']);\n",
+       "            Plotly.purge(gd);\n",
+       "            observer.disconnect();\n",
+       "        }}\n",
+       "}});\n",
+       "\n",
+       "// Listen for the removal of the full notebook cells\n",
+       "var notebookContainer = gd.closest('#notebook-container');\n",
+       "if (notebookContainer) {{\n",
+       "    x.observe(notebookContainer, {childList: true});\n",
+       "}}\n",
+       "\n",
+       "// Listen for the clearing of the current output cell\n",
+       "var outputEl = gd.closest('.output');\n",
+       "if (outputEl) {{\n",
+       "    x.observe(outputEl, {childList: true});\n",
+       "}}\n",
+       "\n",
+       "                        })                };                });            </script>        </div>"
+      ]
      },
      "metadata": {},
      "output_type": "display_data"
@@ -1028,16 +1104,20 @@
     "    rows=1, cols=2,\n",
     "    specs=[[{\"type\": \"table\"},{\"type\": \"pie\"}]]\n",
     ")\n",
-    "fig.add_trace(go.Pie(labels=df['COST_CATEGORY'].tolist(), values=df['TOTAL_DOLLARS_USED'].tolist()),row=1, col=1)\n",
-    "fig.add_trace(go.Table(header=dict(values=['COST_CATEGORY','TOTAL_CREDITS', 'TOTAL_DOLLARS_USED']),\n",
-    "                 cells=dict(values=[df['COST_CATEGORY'],df['TOTAL_CREDITS'],df['TOTAL_DOLLARS_USED']])),row=1, col=2)\n",
-    "fig.update_layout(font_size=10)\n",
-    "fig.show()"
+    "# fig = go.Figure()\n",
+    "\n",
+    "fig.add_trace(go.Pie(labels=df['WAREHOUSE_NAME'].tolist(), values=df['CREDITS_USED_COMPUTE_SUM'].tolist()),row=1, col=2)\n",
+    "fig.add_trace(go.Table(header=dict(values=['WAREHOUSE_NAME','CREDITS_USED_COMPUTE_SUM', 'TOTAL_DOLLARS_USED'],height=40,font_size=10),\n",
+    "                  cells=dict(values=[df.WAREHOUSE_NAME,df.CREDITS_USED_COMPUTE_SUM,df.TOTAL_DOLLARS_USED],height=45,font_size=11)),row=1, col=1)\n",
+    "#fig.update_layout(font_size=12)\n",
+    "fig.show()\n",
+    "# display(tabulate(df, headers = 'keys', tablefmt = 'html', showindex=\"never\"))\n",
+    "# fig = px.pie(df, values='CREDITS_USED_COMPUTE_SUM', names='WAREHOUSE_NAME', title='Credits Used by Type')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 108,
    "metadata": {},
    "outputs": [
     {
@@ -1060,7 +1140,7 @@
        "  4: Decimal('0.000403888')}}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 108,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1568,7 +1648,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('optiml')",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1582,9 +1662,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.8.10"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "0b8a906c7b170557ce5d4758c7e9bdb3506ce8a7fb6256c2cbbf4ff47cece145"
