--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -71,17 +71,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = qlib.total_cost_breakdown('2022-10-01', '2022-10-31')\n",
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.dtypes"
+    "df = qlib.total_cost_breakdown('2022-10-01', '2022-10-31').round(2)\n",
+    "print(tabulate(df, headers='keys', tablefmt='rounded_outline', showindex=False))"
    ]
   },
   {
@@ -94,21 +85,17 @@
     "    rows=1, cols=2,\n",
     "    specs=[[{\"type\": \"table\"},{\"type\": \"pie\"}]]\n",
     ")\n",
-    "# fig = go.Figure()\n",
     "\n",
     "fig.add_trace(go.Pie(labels=df['cost_category'].tolist(), values=df['dollars'].tolist(),name=\"Dollars\"),row=1,col=1)\n",
     "fig.add_trace(go.Pie(labels=df['cost_category'].tolist(), values=df['credits'].tolist(),name='Credits'),row=1,col=2)\n",
     "\n",
-    "# fig.add_trace(go.Table(header=dict(values=['cost_category','credits', 'dollars'],font_size=10),\n",
-    "#                   cells=dict(values=[df['cost_category'],df['credits'],df['dollars']],font_size=10)),row=1, col=1)\n",
-    "#fig.update_layout(font_size=12)\n",
     "fig.update_layout(\n",
     "    title={\n",
     "        'text': \"Breakdown of total cost by usage category\",\n",
-    "        'y':0.9,\n",
+    "        'y':0.1,\n",
     "        'x':0.5,\n",
     "        'xanchor': 'center',\n",
-    "        'yanchor': 'top'})\n",
+    "        'yanchor': 'bottom'})\n",
     "fig.show()"
    ]
   },
@@ -135,33 +122,6 @@
     "* In 2020 auto clustering was on but was turned off - why?\n",
     "* Storage credits at 0 since storage is charged as a flat rate - are numbers consistent?\n",
     "* Definitely did not use $80K worth of credits in October since total bill is $50K - so something is wrong!\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = qlib.cost_of_compute_ts('2022-10-12', '2022-10-13')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df['TOTAL_CREDITS_USED'].sum()"
    ]
   },
   {
