added local cache via simple_cache decorator

--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,9 +13,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<style>.container { width:100% !important; }</style>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "from IPython.display import display, HTML\n",
     "display(HTML(\"<style>.container { width:100% !important; }</style>\"))\n",
@@ -27,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,17 +51,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Initialization"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/Users/skumar/.snowsql/config\n",
+      "Connecting...\n"
+     ]
+    }
+   ],
    "source": [
+    "# Initialize Snowflake connection to Snowflake\n",
     "from optiml.connection import SnowflakeConnConfig\n",
-    "from optiml.queries import SNFLKQuery\n",
     "connection = SnowflakeConnConfig(accountname='jg84276.us-central1.gcp',warehousename=\"XSMALL_WH\").create_connection()\n",
-    "qlib = SNFLKQuery(connection, 'KIV')"
+    "# Initialize local environment\n",
+    "import os\n",
+    "cache_dir = os.path.expanduser('~/data/kiva')\n",
+    "# Initialize query library\n",
+    "from optiml.queries import SNFLKQuery\n",
+    "qlib = SNFLKQuery(connection, 'KIV', cache_dir)\n",
+    "sdate = '2022-10-01'\n",
+    "edate = '2022-10-31'"
    ]
   },
   {
@@ -66,13 +102,40 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Breakdown of total cost by usage type"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading data from cache...\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = qlib.total_cost_breakdown(sdate, edate)\n",
+    "print(tabulate(df, headers='keys', tablefmt='rounded_outline', showindex=False))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = qlib.total_cost_breakdown('2022-10-01', '2022-10-31').round(2)\n",
-    "print(tabulate(df, headers='keys', tablefmt='rounded_outline', showindex=False))"
+    "##TODO create a row for totals and print that out separately\n",
+    "## Is there an excel like visualization of this possible?\n",
+    "df_total = df\n",
+    "df_total.sum()"
    ]
   },
   {
@@ -83,7 +146,7 @@
    "source": [
     "fig = make_subplots(\n",
     "    rows=1, cols=2,\n",
-    "    specs=[[{\"type\": \"table\"},{\"type\": \"pie\"}]]\n",
+    "    specs=[[{\"type\": \"pie\"},{\"type\": \"pie\"}]]\n",
     ")\n",
     "\n",
     "fig.add_trace(go.Pie(labels=df['cost_category'].tolist(), values=df['dollars'].tolist(),name=\"Dollars\"),row=1,col=1)\n",
@@ -122,6 +185,123 @@
     "* In 2020 auto clustering was on but was turned off - why?\n",
     "* Storage credits at 0 since storage is charged as a flat rate - are numbers consistent?\n",
     "* Definitely did not use $80K worth of credits in October since total bill is $50K - so something is wrong!\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Breakdown of total cost by warehouse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = qlib.cost_by_wh(sdate, edate).round(2)\n",
+    "print(tabulate(df, headers='keys', tablefmt='rounded_outline', showindex=False))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig = make_subplots(\n",
+    "    rows=1, cols=2,\n",
+    "    specs=[[{\"type\": \"pie\"},{\"type\": \"pie\"}]]\n",
+    ")\n",
+    "\n",
+    "fig.add_trace(go.Pie(labels=df['warehouse_name'].tolist(), values=df['dollars'].tolist(),name='dollars'),row=1,col=1)\n",
+    "fig.add_trace(go.Pie(labels=df['warehouse_name'].tolist(), values=df['credits'].tolist(),name='credits'),row=1,col=2)\n",
+    "\n",
+    "fig.update_layout(\n",
+    "    title={\n",
+    "        'text': \"Breakdown of total cost by warehouse\",\n",
+    "        'y':0.1,\n",
+    "        'x':0.5,\n",
+    "        'xanchor': 'center',\n",
+    "        'yanchor': 'bottom'})\n",
+    "fig.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Analysis\n",
+    "- Sum of the compute across all the warehouses is 1255.47 credits which is consistent with total cost of compute above. Sanity check to ensure we are not missing any compute or warehouse"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading data from cache...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>A</th>\n",
+       "      <th>B</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>3</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   A  B\n",
+       "0  1  2\n",
+       "1  3  4"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = qlib.test_func('hello')\n",
+    "df"
    ]
   },
   {
