updated nb, added empty functions for user

--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,25 +13,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<style>.container { width:100% !important; }</style>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from IPython.display import display, HTML\n",
     "display(HTML(\"<style>.container { width:100% !important; }</style>\"))\n",
+    "import pandas as pd\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go\n",
     "from plotly.subplots import make_subplots\n",
@@ -40,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,20 +47,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "/Users/skumar/.snowsql/config\n",
-      "Connecting...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Initialize Snowflake connection to Snowflake\n",
     "from optiml.connection import SnowflakeConnConfig\n",
@@ -110,20 +89,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading data from cache...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = qlib.total_cost_breakdown(sdate, edate)\n",
-    "print(tabulate(df, headers='keys', tablefmt='rounded_outline', showindex=False))"
+    "df.loc[len(df.index)] = ['Total', df['credits'].sum(), df['dollars'].sum()]\n",
+    "print(tabulate(df, headers='keys', tablefmt='rounded_outline', showindex=False))\n"
    ]
   },
   {
@@ -132,18 +104,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##TODO create a row for totals and print that out separately\n",
-    "## Is there an excel like visualization of this possible?\n",
-    "df_total = df\n",
-    "df_total.sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "df = df.drop(len(df)-1) ## Remove the last row of totals for the plot\n",
     "fig = make_subplots(\n",
     "    rows=1, cols=2,\n",
     "    specs=[[{\"type\": \"pie\"},{\"type\": \"pie\"}]]\n",
@@ -201,6 +162,7 @@
    "outputs": [],
    "source": [
     "df = qlib.cost_by_wh(sdate, edate).round(2)\n",
+    "df.loc[len(df.index)] = ['Total', df['credits'].sum(), df['dollars'].sum()]\n",
     "print(tabulate(df, headers='keys', tablefmt='rounded_outline', showindex=False))"
    ]
   },
@@ -210,6 +172,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df = df.drop(len(df)-1) ## Remove the last row of totals for the plot\n",
     "fig = make_subplots(\n",
     "    rows=1, cols=2,\n",
     "    specs=[[{\"type\": \"pie\"},{\"type\": \"pie\"}]]\n",
@@ -234,74 +197,6 @@
    "source": [
     "## Analysis\n",
     "- Sum of the compute across all the warehouses is 1255.47 credits which is consistent with total cost of compute above. Sanity check to ensure we are not missing any compute or warehouse"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading data from cache...\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>A</th>\n",
-       "      <th>B</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   A  B\n",
-       "0  1  2\n",
-       "1  3  4"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df = qlib.test_func('hello')\n",
-    "df"
    ]
   },
   {
