reverted storage query to not break total cost and added another query for storage_ts

--- a/notebooks/pilot_kiva.ipynb
+++ b/notebooks/pilot_kiva.ipynb
@@ -34,8 +34,7 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "%aimport optiml.queries\n",
-    "%matplotlib inline"
+    "%aimport optiml.queries"
    ]
   },
   {
